stampato a schermo array post

--- a/index.html
+++ b/index.html
@@ -12,40 +12,44 @@
     <h1>
         Social Posts
     </h1>
-    <div class="container">
 
-        <div class="autore">
-            <div class="img">
-                <img src="https://picsum.photos/50/50" alt="randomImg">
-            </div>
-            <div class="nomeeData">
+    <div class="mainContainer">
+        <!-- <div class="container">
+    
+            <div class="autore">
+                <div class="img">
+                    <img src="https://picsum.photos/50/50" alt="randomImg">
+                </div>
+                <div class="nomeeData">
+                    <p>
+                        nome
+                    </p>
+                    <p>
+                        data
+                    </p>
+                </div>
+            </div> -->
+            <!-- autore -->
+            <!-- <div class="contenuto">
                 <p>
-                    nome
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, libero.
                 </p>
+                <div class="img">
+                    <img src="https://picsum.photos/500/500" alt="immagine">
+                </div>
+            </div> -->
+            <!-- contenuto -->
+            <!-- <div class="likes">
+                <button>
+                    <i class="fas fa-thumbs-up"></i>
+                    Mi Piace
+                </button>
                 <p>
-                    data
+                    Piace a n persone
                 </p>
             </div>
-        </div>
-        <!-- autore -->
-        <div class="contenuto">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, libero.
-            </p>
-            <div class="img">
-                <img src="https://picsum.photos/500/500" alt="immagine">
-            </div>
-        </div>
-        <!-- contenuto -->
-        <div class="likes">
-            <button>
-                <i class="fas fa-thumbs-up"></i>
-                Mi Piace
-            </button>
-            <p>
-                Piace a n persone
-            </p>
-        </div>
+        </div> -->
+        
     </div>
     <script src="./script.js"></script>
 </body>
